@@ -921,6 +921,11 @@ void ScriptWidget::addButton() {
       sl->insertItem(se->text());
       break;
 
+    case ScriptEdit::Mode:
+      stl->insertItem("Mode");
+      sl->insertItem(se->text());
+      break;
+
     default:
       break;
   }
@@ -1014,6 +1019,11 @@ void ScriptWidget::insertButton() {
 
     case ScriptEdit::Save:
       stl->insertItem("Save", stl->currentItem());
+      sl->insertItem(se->text(), sl->currentItem());
+      break;
+
+    case ScriptEdit::Mode:
+      stl->insertItem("Mode", stl->currentItem());
       sl->insertItem(se->text(), sl->currentItem());
       break;
 
