@@ -70,7 +70,8 @@ public:
 		 LoopStart = 10,
 		 LoopEnd = 11, 
 		 Scan = 12,
-                 Save = 13 };
+                 Save = 13,
+		 Mode = 14 };
 };
 
 #endif
