@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.6.16"
+#define KPPPVERSION "1.6.17"
 #endif
