@@ -1,3 +1,7 @@
+Jul 13 1999:
+	* `Mode {7bit|8bit}' script command for CompuServe's 7E1 mode
+	* speed up in reading from the modem
+
 Jun 11 1999:
         * detection of stale lock files works again
         * "PPP support missing" warning is no longer fatal
