@@ -1,3 +1,13 @@
+1999-07-13  Harri Porten  <porten@kde.org>
+
+	* added "Mode 7bit" and "Mode 8bit" script commands for CompuServe
+	users. 7bit will simply strip off the highest bit to deal with the
+	incoming 7E1 data. Write operations are not affected.
+	* modem.cpp: try a tcsendbreak() if tcgetattr() fails. Ask for
+	feedback if that solved the "modem is busy" error for anyone.
+	* modem.cpp: read data in multiple chunks of up to 200 bytes. This 
+	should speed up things and avoid problems with the socket notifier. 
+
 1999-07-11  Harri Porten  <porten@kde.org>
 
 	* connect.cpp: moved some code from readChar() into checkBuffers() 
